[project]
name = "paramobject"
description = "An easy way to create parametrized object in Python."
version = "0.1.0"
authors = [
  { name = "Vianney Rousset" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
